<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PartnerDetailFragment"
    android:layout_margin="16dp"
    android:padding="16dp">

    <TextView
        android:id="@+id/partner_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Partner Name"/>

    <TextView
        android:id="@+id/partner_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/partner_name"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Goal"/>


    <TextView
        android:id="@+id/reward_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/partner_goal"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Reward Type"/>

    <TextView
        android:id="@+id/points_needed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/reward_type"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Points Needed: 00"/>

    <TextView
        android:id="@+id/points_earned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/points_needed"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Points Earned: 00"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/points_earned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="start">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/subtract1_btn"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginEnd="8dp"
            android:text="@string/subtract" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add1_btn"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:text="@string/add"
            android:layout_marginStart="8dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/points_earned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_partner_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/edit_partner" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_goal_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_goal"
            android:layout_marginStart="8dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>